# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-dispatch-triage-env"
version = "0.1.0"
description = "911 Dispatch Triage environment for OpenEnv — multi-incident emergency dispatch RL environment"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (FastAPI server + HTTP/WebSocket client types)
    "openenv-core[core]>=0.2.2",
    # LLM client — required by inference.py
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0",   # used by validate.py for yaml parsing
]

[project.scripts]
# Run the environment server:  uv run --project . server
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.setuptools.package-dir]
"" = "."
